# avro

./: pom.xml
lang/py/: pyproject.toml
lang/py/avro/: constants.py  io.py  schema.py
lang/py/avro/test/: test_io.py
