[tool.poetry]
name = "avro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^2.7 || ^3.5"
python-snappy = {version = "^0.5.4", optional = true}
zstandard = {version = "^0.14.0", optional = true}

[tool.poetry.dev-dependencies]
tox = "^3.19.0"
mypy = {version = "^0.782", python = "^3.5"}
ipython = {version = "^7.17.0", python = "^3.7"}
pylint = {version = "^2.5.3", python = "^3.5"}
pytest = {version = "^6.0.1", python = "^3.5"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
